# sgbs-training

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  404.html  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements-app.txt  requirements.txt  setup.py  sitemap.xml
.cursor/commands/: branch-and-add.md  chinese-expression.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: autoupdate.yaml  build-preview.yaml  deploy-app.yaml  deploy-website.yaml  deploy.yaml  dokku-deploy.yaml  merge-schedule.yaml  version-updater.yaml
apps/: api.py  app.py  emails.txt  users.txt
apps/observation/: __init__.py  app.py  entities.py  events.py  llm.py  passages.py
apps/socratic/: __init__.py  app.py  llm.py  passages.py  prompts.py  verse_parser.py
apps/templates/: template.html
class-notes/lesson-1-foundations/: index.html
class-notes/lesson-2-narrative/: index.html
class-notes/lesson-3-questioning/: index.html
class-notes/lesson-4-argumentation/: index.html
class-notes/lesson-5-situations/: index.html
completion-policy/: index.html
css/: base.css  geist.css
deployments/: email_generator.py
docs/: completion-policy.md  index.md  lesson-1.md  lesson-2.md  lesson-3.md  lesson-4.md  lesson-5.md  register.md  teaching-preparation.md
docs/class-notes/: lesson-1-foundations.md  lesson-2-narrative.md  lesson-3-questioning.md  lesson-4-argumentation.md  lesson-5-situations.md
docs/examples/: luke-literary-devices.md  luke-study-notes.md  matthew-study-notes.md  romans-study-notes.md
docs/javascripts/: chinese-toggle.js
docs/resources/: bible-study-notes.md  books.md  genai.md  ibs-argumentation-notes.md  ibs-narrative-notes.md  luke-study-notes.md  matthew-study-notes.md  preparation.md  questions.md  recordings.md  space-ecology.md  theme.md  theology-equipments.md  virtual-study.md
docs/stylesheets/: extra.css
docs/templates/: dark.html
docs/tools/: ibs-argumentation-notes.md  ibs-narrative-notes.md  (+1 more)
drafts/: thoughts.md
javascripts/: chinese-toggle.js  expandable-cards.js
js/: callbacks.js  copy-button.js
notebooks/: check-auth.ipynb  prototype-auto-google-docs.ipynb
register/: index.html
search/: search_index.json
sgbs_training/: __init__.py  api.py  authentication.py  docs.py  email.py  exercises.py  scriptures.py
stylesheets/: extra.css  transition.css
teaching-preparation/: index.html
(+19 files in other folders)
