[project]
authors = [{name = "Eric Ma", email = "ericmajinglong@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "sgbs-training"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
sgbs-training = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.website.dependencies]
mkdocs = "*"
mkdocs-material = "*"

[tool.pixi.feature.website.tasks]
build = "mkdocs build"
serve = "mkdocs serve -a 0.0.0.0:8010 --dirtyreload"

[tool.pixi.feature.api.dependencies]
fastapi = "*"
markdown = "*"
panel = "*"
python-dotenv = "*"
pyprojroot = "*"
pydrive2 = ">=1.19.0,<2"
uvicorn = ">=0.30.6,<0.31"

[tool.pixi.feature.api.tasks]
app = "uvicorn apps.api:app --host 0.0.0.0 --port 5006"

[tool.pixi.feature.devtools.dependencies]
ipython = "*"


[tool.pixi.environments]
website = ["website"]
api = ["api"]
default = ["website", "api", "devtools"]
