[project]
authors = [{name = "Eric Ma", email = "ericmajinglong@gmail.com"}]
dependencies = ["mkdocs-shadcn>=0.4.2,<0.10"]
description = "Add a short description here"
name = "sgbs-training"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
sgbs-training = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.website.dependencies]
mkdocs = "*"
mkdocs-material = "*"

[tool.pixi.feature.website.tasks]
build = "mkdocs build"
serve = "mkdocs serve -a 0.0.0.0:8010 --clean "

[tool.pixi.feature.api.dependencies]
fastapi = "*"
markdown = "*"
panel = "*"
python-dotenv = "*"
pyprojroot = "*"
pydrive2 = ">=1.19.0,<2"
uvicorn = "*"
litellm = ">=1.0.0"

[tool.pixi.feature.api.tasks]
app = "uvicorn apps.api:app --host 0.0.0.0 --port 5006 --reload"
socratic = "uvicorn apps.socratic.app:app --host 0.0.0.0 --port 5007 --reload"
observation = "uvicorn apps.observation.app:app --host 0.0.0.0 --port 5008 --reload"

[tool.pixi.feature.devtools.dependencies]
ipython = "*"


[tool.pixi.environments]
website = ["website"]
api = ["api"]
default = ["website", "api", "devtools"]
